Working menus with mouse - Load Menu. Mesh Class. Less sync ops. Fix for block removal.